# rust-agtop

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO  opencode.jsonc  prek.toml  skills-lock.json
.github/workflows/: ci.yml  release.yml
crates/agtop-cli/: Cargo.toml  build.rs
crates/agtop-cli/src/: fmt.rs  lib.rs  main.rs  quota_cmd.rs  update.rs  version.rs
crates/agtop-cli/src/tui/: animation.rs  app.rs  app_v2.rs  column_config.rs  component.rs  events.rs  focus.rs  input.rs  mod.rs  msg.rs  refresh.rs  refresh_adapter.rs  session_cache.rs  theme.rs
crates/agtop-cli/src/tui/app/: cost.rs  filter.rs  history.rs  mod.rs  quota.rs  sort.rs
crates/agtop-cli/src/tui/screens/: mod.rs
crates/agtop-cli/src/tui/screens/aggregation/: controls.rs  drilldown.rs  mod.rs  table.rs
crates/agtop-cli/src/tui/screens/config/: color_picker.rs  controls.rs  detail.rs  mod.rs  sidebar.rs
crates/agtop-cli/src/tui/screens/config/sections/: about.rs  appearance.rs  clients.rs  columns.rs  data_sources.rs  keybinds.rs  refresh.rs
crates/agtop-cli/src/tui/screens/dashboard/: header.rs  info_costs.rs  info_details.rs  info_drawer.rs  info_format.rs  info_general.rs  info_process.rs  info_summary.rs  mod.rs  quota.rs  sessions.rs
crates/agtop-cli/src/tui/theme_v2/: client_palette.rs  color.rs  mod.rs  vscode_dark_plus.rs
crates/agtop-cli/src/tui/widgets/: colored_label.rs  config_tab.rs  cost_tab.rs  dashboard_cost.rs  dashboard_plan.rs  dashboard_usage.rs  drawer.rs  gradient_bar.rs  icon.rs  info_tab.rs  mod.rs  process_tab.rs  quota_bar.rs  quota_tab.rs  session_table.rs  sparkline_braille.rs  state_display.rs  state_dot.rs  state_style.rs  tab_bar.rs  usage_chart.rs
crates/agtop-cli/tests/: aggregation_snapshot.rs  config_snapshot.rs  header_snapshot.rs  quota_panel_snapshot.rs  sessions_table_snapshot.rs  snapshot_helpers.rs  state_dot_snapshot.rs  tab_bar_snapshot.rs
crates/agtop-cli/tests/fixtures/: github_latest_release.json
crates/agtop-cli/tests/snapshots/: aggregation_snapshot__aggregation_today_by_client_140x20.snap  config_snapshot__config_about_nf_off.snap  config_snapshot__config_about_nf_off.snap.new  config_snapshot__config_appearance_nf_off.snap  config_snapshot__config_appearance_nf_off.snap.new  config_snapshot__config_appearance_nf_on.snap  config_snapshot__config_appearance_nf_on.snap.new  config_snapshot__config_clients_nf_off.snap  config_snapshot__config_clients_nf_off.snap.new  config_snapshot__config_columns_nf_off.snap  config_snapshot__config_columns_nf_off.snap.new  config_snapshot__config_data_sources_nf_off.snap  config_snapshot__config_data_sources_nf_off.snap.new  config_snapshot__config_keybinds_nf_off.snap  config_snapshot__config_keybinds_nf_off.snap.new  config_snapshot__config_refresh_nf_off.snap  config_snapshot__config_refresh_nf_off.snap.new  header_snapshot__header_140.snap  header_snapshot__header_80.snap  quota_panel_snapshot__quota_long_140x12.snap  quota_panel_snapshot__quota_short_140x4.snap  sessions_table_snapshot__sessions_table_140x12.snap  state_dot_snapshot__state_dots_anim_off.snap  state_dot_snapshot__state_dots_anim_on.snap  tab_bar_snapshot__tab_bar_config_140.snap  tab_bar_snapshot__tab_bar_dashboard_120.snap
crates/agtop-core/: Cargo.toml
crates/agtop-core/src/: aggregate.rs  client.rs  clients.rs  error.rs  lib.rs  litellm.rs  logo.rs  models_dev.rs  pricing.rs  project.rs  provider.rs  providers.rs  quota.rs  session.rs  state_resolution.rs
crates/agtop-core/src/clients/: antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  gemini_cli.rs  opencode.rs  util.rs
crates/agtop-core/src/process/: argv_uuid.rs  correlator.rs  fd.rs  mod.rs  scanner.rs  transcript_paths.rs
crates/agtop-core/src/providers/: antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  gemini_cli.rs  opencode.rs  util.rs
crates/agtop-core/src/quota/: auth.rs  config.rs  http.rs  subscription.rs  time.rs  types.rs
crates/agtop-core/src/quota/providers/: claude.rs  codex.rs  copilot.rs  copilot_addon.rs  mod.rs  zai.rs
crates/agtop-core/src/quota/providers/google/: api.rs  auth.rs  mod.rs  transforms.rs
crates/agtop-core/tests/: claude_subagents.rs  codex_fixture.rs  opencode_fixture.rs  process_integration.rs  quota_claude.rs  quota_codex.rs  quota_copilot.rs  quota_copilot_addon.rs  quota_google.rs  quota_live.rs  quota_public_api.rs  quota_zai.rs
crates/agtop-core/tests/fixtures/auth/: opencode_full.json  opencode_minimal.json  opencode_nested_google_oauth.json
crates/agtop-core/tests/fixtures/claude/: 200_active_subscription.json  200_minimal.json
crates/agtop-core/tests/fixtures/claude/project-slug/: deadbeef-1234-5678-9abc-def012345678.jsonl
crates/agtop-core/tests/fixtures/claude/project-slug/deadbeef-1234-5678-9abc-def012345678/subagents/: agent-aaaa.jsonl  agent-bbbb.jsonl
crates/agtop-core/tests/fixtures/codex/: 200_balance_as_string.json  200_sample.json  200_unlimited_credits.json  401_token_rejected.json
crates/agtop-core/tests/fixtures/copilot/: 200_business_metered.json  200_individual_unlimited.json
crates/agtop-core/tests/fixtures/google/: antigravity_accounts.json  fetchAvailableModels_antigravity.json  fetchAvailableModels_gemini.json  loadCodeAssist_free_tier.json  loadCodeAssist_paid_tier.json  oauth_token_response.json  retrieveUserQuota_gemini.json
crates/agtop-core/tests/fixtures/zai/: 200_lite_both_windows.json  200_time_limit_only.json  200_unknown_unit.json
docs/: 2026-04-27-state-vocabulary-unification.md  AUDIT-2026-04-17.md  copilot.md  gemini-cli.md  session-pid-tracking-status.md
docs/architecture/: ARCHITECTURE.md
docs/plans/: 2026-04-24-session-pid-tracking.md
docs/specs/: 2026-04-24-session-pid-tracking-design.md
docs/superpowers/plans/: 2026-04-17-subscription-details-two-pane.md  2026-04-19-models-dev-pricing-logos.md  2026-04-26-meta-pipeline.md  2026-04-26-pipeline-summary.md  2026-04-27-disk-io-rates.md  2026-04-27-tui-v2-bugfix-and-features.md
docs/superpowers/specs/: 2026-04-17-subscription-details-two-pane-design.md  (+6 more)
(+6 files in other folders)
