[workspace]
resolver = "2"
members = ["crates/agtop-core", "crates/agtop-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["rust-agtop contributors"]
repository = "https://github.com/anomalyco/rust-agtop"
rust-version = "1.75"

[workspace.dependencies]
agtop-core = { path = "crates/agtop-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Used by agtop-core to fetch LiteLLM pricing JSON. Minimal sync HTTP
# client with rustls — no tokio, no OpenSSL, no async runtime pulled in.
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
