[workspace]
resolver = "2"
members = ["crates/agtop-core", "crates/agtop-cli"]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["jedzill4"]
repository = "https://github.com/collectiveai-team/rust-agtop"
rust-version = "1.75"

[workspace.dependencies]
agtop-core = { path = "crates/agtop-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Used by agtop-core to fetch LiteLLM pricing JSON. Minimal sync HTTP
# client with rustls — no tokio, no OpenSSL, no async runtime pulled in.
ureq = { version = "3", default-features = false, features = [
    "rustls",
    "json",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
indexmap = { version = "2", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env"] }
# Process enumeration for session<->OS correlation (issue #23).
# sysinfo is cross-platform; procfs/libproc give platform-specific fd
# listings that sysinfo does not expose.
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
procfs = "0.18"
libproc = "0.14"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
