[package]
name = "agtop-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for agtop: list and inspect AI coding agent sessions with token/cost estimates."

[[bin]]
name = "agtop"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
agtop-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Used by `--watch` for cross-platform screen clearing; also the terminal
# backend for the ratatui-based interactive TUI. Kept at 0.28 to match
# ratatui 0.29's own crossterm dep.
crossterm = "0.28"
# Clean Ctrl-C handling in the `--watch` loop so we can restore the cursor
# before exiting. Zero transitive deps.
ctrlc = "3"
# Interactive TUI. Uses the crossterm backend pulled in above.
ratatui = "0.29"
# Background refresh worker for the TUI: a small tokio runtime driving a
# watch channel so the UI redraws on each snapshot. `rt` gives us the
# current-thread runtime; `macros` is for #[tokio::main]-style spawns if
# ever needed; `sync` supplies watch/Mutex; `time` supplies `sleep`.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
# Fast non-cryptographic hasher used by the plan-usage cache key in
# the refresh worker. Trusted in-process input only, so SipHash's DoS
# resistance is not needed; FxHasher is ~2-4x faster on small keys.
rustc-hash = "2"
