[package]
name = "agtop-cli"
version.workspace = true
edition.workspace = true
build = "build.rs"
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for agtop: list and inspect AI coding agent sessions with token/cost estimates."

[lib]
name = "agtop_cli"
path = "src/lib.rs"

[[bin]]
name = "agtop"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
agtop-core = { workspace = true, features = ["cli"] }
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Used by `--watch` for cross-platform screen clearing; also the terminal
# backend for the ratatui-based interactive TUI. Kept at 0.28 to match
# ratatui 0.29's own crossterm dep.
crossterm = "0.28"
# Clean Ctrl-C handling in the `--watch` loop so we can restore the cursor
# before exiting. Zero transitive deps.
ctrlc = "3"
# Interactive TUI. Uses the crossterm backend pulled in above.
ratatui = "0.29"
# Background refresh worker for the TUI: a small tokio runtime driving a
# watch channel so the UI redraws on each snapshot. `rt` gives us the
# current-thread runtime; `macros` is for #[tokio::main]-style spawns if
# ever needed; `sync` supplies watch/Mutex; `time` supplies `sleep`.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
# Fast non-cryptographic hasher used by the plan-usage cache key in
# the refresh worker. Trusted in-process input only, so SipHash's DoS
# resistance is not needed; FxHasher is ~2-4x faster on small keys.
rustc-hash = "2"
sysinfo = { workspace = true }
# Provider logo rendering in the dashboard plan panel. Auto-detects
# terminal protocol (sixel/kitty/iterm2) and falls back to halfblocks.
ratatui-image = { version = "8", default-features = false, features = ["crossterm", "image-defaults"] }
# Image decoding (SVG → raster) for provider logos from models.dev.
image = "0.25"
resvg = { version = "0.44", default-features = false }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
