[package]
name = "agtop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for agtop: client abstraction, session discovery, token/cost analysis for AI coding agents (Claude Code, Codex, OpenCode)."

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
chrono.workspace = true
walkdir.workspace = true
tracing.workspace = true
ureq.workspace = true
rusqlite.workspace = true
rayon.workspace = true
indexmap.workspace = true
figment.workspace = true

[dev-dependencies]
tempfile = "3"
figment = { version = "0.10", features = ["toml", "env", "test"] }
