[package]
name = "agtop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for agtop: client abstraction, session discovery, token/cost analysis for AI coding agents (Claude Code, Codex, OpenCode)."

[lints]
workspace = true

[features]
default = []
cli = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
chrono.workspace = true
walkdir.workspace = true
tracing.workspace = true
ureq.workspace = true
rusqlite.workspace = true
rayon.workspace = true
indexmap.workspace = true
figment.workspace = true
sysinfo.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libproc.workspace = true

[dev-dependencies]
tempfile = "3"
figment = { version = "0.10", features = ["toml", "env", "test"] }
serial_test = "3"
